--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h1 { display: flex;
 	padding: 0px;
 	margin-left: 0; 
 	margin-right: 0;
+	font-style: italic;
 
 }
 
@@ -63,13 +64,13 @@ h1 { display: flex;
 @media (min-width: 992px) { 
 #box1 {
 	border: solid black; border-width: 1px; float: left;
-	width: 30%; height: 200px; margin-right: 20px; left: 40px;
+	width: 30%; height: 200px; margin-right: 3%; left: 40px;
 	margin-bottom: 20px; padding: 40px; position: relative;
     } 
 
 #box2 {
 	border: solid black; border-width: 1px; float: left; position: relative;
-	width: 30%; height: 200px; margin-right: 20px; left: 40px;
+	width: 30%; height: 200px; margin-right: 3%; left: 40px;
 	margin-bottom: 20px; padding: 40px; position: relative;
 }
 #box3 { 
@@ -78,17 +79,17 @@ h1 { display: flex;
 	margin-bottom: 20px; padding: 40px; position: relative;
     } 
 #p1 {     
-	 width: 20%; height: 30px; float: left;
+	 width: 20%; height: 15%; float: left;
  border: solid black; border-width: 1px; 
 	position: absolute; padding: 1px; right: -1px; top: -17px;
 }
 #p2 { 
-	width: 20%; height: 30px; float: left;
+	width: 20%; height: 15%; float: left;
  border: solid black; border-width: 1px; 
 	position: absolute; padding: 1px; right: -1px; top: -17px;
 }
 #p3 { 
-	width: 20%; height: 30px; float: left;
+	width: 20%; height: 15%; float: left;
  border: solid black; border-width: 1px; 
 	position: absolute; padding: 1px; right: -1px; top: -17px;
 }
@@ -99,32 +100,32 @@ h1 { display: flex;
 @media (min-width: 768px) and (max-width: 991px) {
 #box1 {
 	border: solid black; border-width: 1px; float: left;
-	width: 30%; height: 150px; margin-left: 111px; margin-right: 19px;
-	margin-bottom: 19px; position: relative; left: 50px; padding: 35px;
+	width: 30%; height: 150px; margin-left: 111px; margin-right: 3%;
+	margin-bottom: 3%; position: relative; left: 50px; padding: 35px;
     } 
 
 #box2 {
 	border: solid black; border-width: 1px; float: left;
-	width: 30%; height: 150px; margin-right: 19px; padding: 35px;
-	margin-bottom: 19px; position: relative; left: 50px;
+	width: 30%; height: 150px; margin-right: 3%; padding: 35px;
+	margin-bottom: 3%; position: relative; left: 50px;
     } 
 #box3 { margin-top: 186px; margin-left: 111px; left: 50px;
 	border: solid black; border-width: 1px; padding: 35px;
-	width: 62.2%; height: 150px; position: relative;
+	width: 63%; height: 150px; position: relative;
     } 
 
 #p1 {     
-	width: 25%; height: 30px; float: left;
+	width: 25%; height: 20%; float: left;
  border: solid black; border-width: 1px; 
 	position: absolute; padding: 1px; right: -1px; top: -17px; 
 }
 #p2 { 
-	width: 25%; height: 30px; float: left;
+	width: 25%; height: 20%; float: left;
  border: solid black; border-width: 1px; 
 	position: absolute; padding: 1px; right: -1px; top: -17px;
 }
 #p3 { 
- width: 12%; height: 30px; float: left;
+ width: 12%; height: 20%; float: left;
  border: solid black; border-width: 1px; 
  position: absolute; padding: 1px; right: -1px; top: -17px;
 }
@@ -136,33 +137,34 @@ h1 { display: flex;
 #box1 {     
 	width: 60%; height: 40%; 
     border: solid black; border-width: 1px; 
-	position: relative; padding: 25px;
-	margin-right: auto; margin-left: auto; 
+	position: relative; padding: 7%;
+	margin-right: auto; margin-left: auto;
+	margin-bottom: 3%; 
 }
 #box2 { 
 	width: 60%; height: 40%; border: solid black; border-width: 1px; 
-	padding: 25px; position: relative;
+	padding: 7%; position: relative; margin-bottom: 3%;
 	margin-right: auto; margin-left: auto;
 }
 #box3 { 
 	width: 60%; height: 40%; border: solid black; border-width: 1px;
-	padding: 25px; position: relative; 
+	padding: 7%; position: relative; margin-bottom: 3%;
 	margin-right: auto; margin-left: auto;
 }
 #p1 {
-	width: 20%; height: 30px; 
+	width: 20%; height: 15%; 
     border: solid black; border-width: 1px; 
 	position: absolute; padding: 1px; right: -1px; top: -17.6px;
 } 
 #p2 {
-	width: 20%; height: 30px; 
+	width: 20%; height: 15%; 
     border: solid black; border-width: 1px; 
 	position: absolute; padding: 1px; right: -1px; top: -17.6px;
 } 
 #p3 {
-	width: 20%; height: 30px; 
+	width: 20%; height: 15%; 
  border: solid black; border-width: 1px;position: absolute;
-  padding: 1px; right: -1px; top: -17.6px;
+  padding: 1px; right: -1px; top: -17.5px;
 } 
 }
 
